Introduce lombok for reduce boilerplate code